manifests-failed/clustercontrol-2024.05.1.tgz-manifest.yaml
---
# Source: clustercontrol/charts/nginx-ingress-controller/templates/controller-networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: my-release-nginx-ingress-controller
  namespace: "clustercontrol-2024.05.1.tgz"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nginx-ingress-controller
    app.kubernetes.io/version: 1.10.0
    helm.sh/chart: nginx-ingress-controller-11.1.0
    app.kubernetes.io/component: controller
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: nginx-ingress-controller
      app.kubernetes.io/component: controller
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 8080
        - port: 8443
---
# Source: clustercontrol/charts/nginx-ingress-controller/templates/default-backend-networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: my-release-nginx-ingress-controller-default-backend
  namespace: "clustercontrol-2024.05.1.tgz"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nginx-ingress-controller
    app.kubernetes.io/version: 1.10.0
    helm.sh/chart: nginx-ingress-controller-11.1.0
    app.kubernetes.io/component: default-backend
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: nginx-ingress-controller
      app.kubernetes.io/component: default-backend
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 8080
---
# Source: clustercontrol/charts/monitoring/templates/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: clustercontrol-2024.05.1.tgz
  labels:
    app: server
    app.kubernetes.io/name: monitoring
    app.kubernetes.io/instance: my-release
    helm.sh/chart: monitoring-0.9.16
    app.kubernetes.io/managed-by: Helm
  name: my-release-monitoring-server
spec:
  ports:
    - name: http
      port: 9090
      protocol: TCP
      targetPort: http
  selector:
    app: server
    app.kubernetes.io/name: monitoring
    app.kubernetes.io/instance: my-release
  type: "ClusterIP"
---
# Source: clustercontrol/charts/mysql-operator/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-operator
  namespace: clustercontrol-2024.05.1.tgz
  labels:
    name: mysql-operator
spec:
  type: ClusterIP
  ports:
  - port: 9443
    protocol: TCP
  selector:
    name: mysql-operator
---
# Source: clustercontrol/charts/nginx-ingress-controller/templates/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-nginx-ingress-controller
  namespace: "clustercontrol-2024.05.1.tgz"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nginx-ingress-controller
    app.kubernetes.io/version: 1.10.0
    helm.sh/chart: nginx-ingress-controller-11.1.0
    app.kubernetes.io/component: controller
spec:
  type: LoadBalancer
  sessionAffinity: None
  externalTrafficPolicy: ""
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: nginx-ingress-controller
    app.kubernetes.io/component: controller
---
# Source: clustercontrol/charts/nginx-ingress-controller/templates/default-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-nginx-ingress-controller-default-backend
  namespace: "clustercontrol-2024.05.1.tgz"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nginx-ingress-controller
    app.kubernetes.io/version: 1.25.4
    helm.sh/chart: nginx-ingress-controller-11.1.0
    app.kubernetes.io/component: default-backend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: nginx-ingress-controller
    app.kubernetes.io/component: default-backend
---
# Source: clustercontrol/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cmon-master
spec:
  ports:
  - port: 9501
    protocol: TCP
    targetPort: 9501
    name: 9501-port
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: 8080-port
  - port: 9954
    protocol: TCP
    targetPort: 9954
    name: 9954-port
  - port: 80
    protocol: TCP
    targetPort: 80
    name: 80-port
  - port: 9511
    protocol: TCP
    targetPort: 9511
    name: 9511-port
  selector:
    app: cmon-master
    run: cmon-master
  type: ClusterIP
---
# Source: clustercontrol/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: severalnines
spec:
  externalName: severalnines.com
  type: ExternalName
  ports:
  - port: 443
    name: port-443
  - port: 80
    name: port-80
---
# Source: clustercontrol/charts/nginx-ingress-controller/templates/controller-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: my-release-nginx-ingress-controller
  namespace: "clustercontrol-2024.05.1.tgz"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nginx-ingress-controller
    app.kubernetes.io/version: 1.10.0
    helm.sh/chart: nginx-ingress-controller-11.1.0
    app.kubernetes.io/component: controller
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: nginx-ingress-controller
      app.kubernetes.io/component: controller
  revisionHistoryLimit: 10
  minReadySeconds: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: nginx-ingress-controller
        app.kubernetes.io/version: 1.10.0
        helm.sh/chart: nginx-ingress-controller-11.1.0
        app.kubernetes.io/component: controller
    spec:
      
      dnsPolicy: ClusterFirst
      automountServiceAccountToken: true
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: my-release
                    app.kubernetes.io/name: nginx-ingress-controller
                    app.kubernetes.io/component: controller
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      hostNetwork: false
      serviceAccountName: my-release-nginx-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
        - name: controller
          image: docker.io/bitnami/nginx-ingress-controller:1.10.0-debian-12-r6
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
              - NET_BIND_SERVICE
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seccompProfile:
              type: RuntimeDefault
          args:
            - --default-backend-service=$(POD_NAMESPACE)/my-release-nginx-ingress-controller-default-backend
            - --publish-service=clustercontrol-2024.05.1.tgz/my-release-nginx-ingress-controller
            - --http-port=8080
            - --https-port=8443
            - --healthz-port=10254
            - --election-id=ingress-controller-leader
            - --controller-class=k8s.io/ingress-nginx
            - --configmap=$(POD_NAMESPACE)/my-release-nginx-ingress-controller
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            httpGet:
              path: /healthz
              port: metrics
              scheme: HTTP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            httpGet:
              path: /healthz
              port: metrics
              scheme: HTTP
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: https
              containerPort: 8443
              protocol: TCP
            - name: metrics
              containerPort: 10254
              protocol: TCP
          resources:
            limits:
              cpu: 150m
              ephemeral-storage: 1024Mi
              memory: 192Mi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 128Mi
          volumeMounts:
            - name: empty-dir
              mountPath: /etc/nginx
              subPath: app-nginx-dir
            - name: empty-dir
              mountPath: /etc/ingress-controller
              subPath: app-controller-dir
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: empty-dir
              mountPath: /tmp/nginx
              subPath: app-tmp-dir
            - name: empty-dir
              mountPath: /etc/ingress-controller/telemetry
              subPath: app-telemetry-dir
      volumes:
        - name: empty-dir
          emptyDir: {}
---
# Source: clustercontrol/charts/monitoring/templates/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: server
    app.kubernetes.io/name: monitoring
    app.kubernetes.io/instance: my-release
    helm.sh/chart: monitoring-0.9.16
    app.kubernetes.io/managed-by: Helm
  name: my-release-monitoring-server
  namespace: clustercontrol-2024.05.1.tgz
spec:
  selector:
    matchLabels:
      app: server
      app.kubernetes.io/name: monitoring
      app.kubernetes.io/instance: my-release
  replicas: 1
  strategy:
    # Must be "Recreate" when we have a persistent volume
    type: Recreate
  template:
    metadata:
      annotations:
        prometheus.io/port: "8428"
        prometheus.io/scrape: "true"
      labels:
        app: server
        app.kubernetes.io/name: monitoring
        app.kubernetes.io/instance: my-release
        helm.sh/chart: monitoring-0.9.16
        app.kubernetes.io/managed-by: Helm
    spec:
      automountServiceAccountToken: true
      containers:
        - name: monitoring-server
          securityContext:
            {}
          image: "victoriametrics/victoria-metrics:v1.99.0"
          imagePullPolicy: "IfNotPresent"
          args:
            - "--retentionPeriod=1"
            - "--storageDataPath=/storage"
            - -promscrape.config=/scrapeconfig/scrape.yml
            - --envflag.enable=true
            - --envflag.prefix=VM_
            - --loggerFormat=json
            - --maxLabelsPerTimeseries=99
            - --promscrape.maxScrapeSize=5.6777216e+07
          ports:
            - name: http
              containerPort: 8428
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /health
              port: 8428
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
          resources:
            {}
          volumeMounts:
            - name: server-volume
              mountPath: /storage
              subPath: 
            - name: scrapeconfig
              mountPath: /scrapeconfig
            
      serviceAccountName: my-release-monitoring
      terminationGracePeriodSeconds: 60
      volumes:
      - name: scrapeconfig
        configMap:
          name: my-release-monitoring-server-scrapeconfig
      - name: server-volume
        persistentVolumeClaim:
          claimName: my-release-monitoring-server
---
# Source: clustercontrol/charts/mysql-operator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-operator
  namespace: clustercontrol-2024.05.1.tgz
  labels:
    version: "8.0.37-2.0.14"
    app.kubernetes.io/name: mysql-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "8.0.37-2.0.14"
    app.kubernetes.io/component: controller
    app.kubernetes.io/managed-by: helm
    app.kubernetes.io/created-by: helm
spec:
  replicas: 1
  selector:
    matchLabels:
      name: mysql-operator
  template:
    metadata:
      labels:
        name: mysql-operator
    spec:
      containers:
        - name: mysql-operator
          image: container-registry.oracle.com/mysql/community-operator:8.0.37-2.0.14
          imagePullPolicy: IfNotPresent
          args: ["mysqlsh", "--log-level=@INFO", "--pym", "mysqloperator", "operator"]
          readinessProbe:
            exec:
              command:
              - cat
              - /tmp/mysql-operator-ready
            initialDelaySeconds: 1
            periodSeconds: 3
          volumeMounts:
            - name: mysqlsh-home
              mountPath: /mysqlsh
            - name: tmpdir
              mountPath: /tmp
          securityContext:
            runAsUser: 2
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
      volumes:
        - name: mysqlsh-home
          emptyDir: {}
        - name: tmpdir
          emptyDir: {}
      serviceAccountName: mysql-operator-sa
---
# Source: clustercontrol/charts/nginx-ingress-controller/templates/default-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-nginx-ingress-controller-default-backend
  namespace: "clustercontrol-2024.05.1.tgz"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nginx-ingress-controller
    app.kubernetes.io/version: 1.25.4
    helm.sh/chart: nginx-ingress-controller-11.1.0
    app.kubernetes.io/component: default-backend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: nginx-ingress-controller
      app.kubernetes.io/component: default-backend
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: nginx-ingress-controller
        app.kubernetes.io/version: 1.25.4
        helm.sh/chart: nginx-ingress-controller-11.1.0
        app.kubernetes.io/component: default-backend
    spec:
      
      automountServiceAccountToken: true
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: my-release
                    app.kubernetes.io/name: nginx-ingress-controller
                    app.kubernetes.io/component: default-backend
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      serviceAccountName: my-release-nginx-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
        - name: default-backend
          image: docker.io/bitnami/nginx:1.25.4-debian-12-r7
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seccompProfile:
              type: RuntimeDefault
          args:
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            httpGet:
              path: /healthz
              port: http
              scheme: HTTP
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
            httpGet:
              path: /healthz
              port: http
              scheme: HTTP
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 150m
              ephemeral-storage: 1024Mi
              memory: 192Mi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 128Mi
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/nginx/tmp
              subPath: app-tmp-dir
            - name: nginx-config-volume
              mountPath: /opt/bitnami/nginx/conf/bitnami/defaultBackend.conf
              subPath: defaultBackend.conf
              readOnly: true
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: nginx-config-volume
          configMap:
            name: my-release-nginx-ingress-controller-default-backend
            items:
              - key: defaultBackend.conf
                path: defaultBackend.conf
---
# Source: clustercontrol/templates/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cmon-master
  labels:
    app: cmon-master
    run: cmon-master
spec:
  selector:
    matchLabels:
      app: cmon-master
      run: cmon-master
  replicas: 1
  serviceName: cmon-master
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9954"
      labels:
        app: cmon-master
        run: cmon-master
    spec:
      containers:
      - name: cmon-master
        image: severalnines/cmon:2.0.0-8821
        command: [ '/usr/sbin/cmon' ]
        args:
        - -s
        - --no-log-db
        - -b 0.0.0.0
        - --mysql-connect-retries=5
        - -d
        
        securityContext:
          privileged: True
        ports:
        - containerPort: 9501
          protocol: TCP
          name: cmon9501
        - containerPort: 9500
          protocol: TCP
          name: cmon9500
        volumeMounts:
        - mountPath: /etc/cmon.d/
          name: cmon-master-pv
        - mountPath: /etc/cmon.cnf
          subPath: cmon.cnf
          name: cmon-cnf-cfg
        - mountPath: /root/.s9s/s9s.conf
          subPath: s9s.conf
          name: s9s-cnf-cfg
        - mountPath: /root/.ssh-keys
          name: ssh-keys
        
        - mountPath: /var/lib/cmon
          name: cmon-pv-var-lib-cmon
        
        livenessProbe:
          httpGet:
            path: /v2/controller?operation=ping
            port: 9501
            scheme: HTTPS
          initialDelaySeconds: 60
          timeoutSeconds: 10
          periodSeconds: 30
      - name: cmon-cloud
        image: severalnines/cmon:2.0.0-8821
        command: ['sh', '-c', '/usr/sbin/cmon-cloud']
        securityContext:
          privileged: True
        ports:
        - containerPort: 9518
          protocol: TCP
          name: cmon9518
      - name: cmon-sd
        image: severalnines/cmon-sd:build-38
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          protocol: TCP
          name: cmon-sd8080
      - name: cmon-exporter
        image: severalnines/cmon_exporter-linux-amd64:main
        ports:
        - containerPort: 9954
          protocol: TCP
          name: cmon-exp9954
      - name: ccv2
        image: severalnines/cc-frontend:2.2.3
        ports:
        - containerPort: 80
          protocol: TCP
          name: 80-port
        volumeMounts:
        - mountPath: /usr/share/nginx/html/config.js
          subPath: config.js
          name: config-js-cfg
      - name: cmon-ssh
        image: severalnines/cmon:2.0.0-8821
        command: ['sh', '-c', '/usr/sbin/cmon-ssh']
        ports:
        - containerPort: 9511
          protocol: TCP
          name: cmon-ssh9511
        volumeMounts:
        - mountPath: /etc/cmon.d/
          name: cmon-master-pv
        
      volumes:
      - name: cmon-master-pv
        persistentVolumeClaim:
          claimName: cmon-master-volume
      - name: cmon-pv-var-lib-cmon
        persistentVolumeClaim:
          claimName: cmon-var-lib-cmon
      - name: cmon-cnf-cfg
        secret:
          secretName: cmon-cnf
      - name: cmon-license
        secret:
          secretName: cmon-license
          optional: true
      - name: s9s-cnf-cfg
        secret:
          secretName: s9s-conf
      - name: ssh-keys
        secret:
          secretName: ssh-keys
      - name: config-js-cfg
        configMap:
          name: config-js
---
# Source: clustercontrol/charts/nginx-ingress-controller/templates/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nginx-ingress-controller
    app.kubernetes.io/version: 1.10.0
    helm.sh/chart: nginx-ingress-controller-11.1.0
    app.kubernetes.io/component: controller
spec:
  controller: k8s.io/ingress-nginx
---
# Source: clustercontrol/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clustercontrol-ccv2-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - localhost
      secretName: cmon-cert
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              service:
                name: cmon-master
                port:
                  number: 80 #ccv2
            path: /(.*)
            pathType: ImplementationSpecific
---
# Source: clustercontrol/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clustercontrol-ccv2-ingress-lic
  annotations:
    kubernetes.io/tls-acme: "true"
    
    nginx.ingress.kubernetes.io/rewrite-target: /service/lic.php
    nginx.ingress.kubernetes.io/upstream-vhost: severalnines.com
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/server-snippet: |
      proxy_ssl_name severalnines.com;
      proxy_ssl_server_name on;

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - localhost
      secretName: cmon-cert
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              service:
                name: severalnines
                port:
                  number: 443
            path: /cc-license
            pathType: ImplementationSpecific
---
# Source: clustercontrol/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clustercontrol-cmon-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_pass_header Server;
      add_header Server $upstream_http_server;
      more_set_headers "Set-Cookie: $sent_http_set_cookie; Path=/";

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - localhost
      secretName: cmon-cert
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              service:
                name: cmon-master #cmon
                port:
                  number: 9501
            path: /cmon/(.*)
            pathType: ImplementationSpecific
---
# Source: clustercontrol/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clustercontrol-cmon-ssh-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - localhost
      secretName: localhost
  rules:
    - host: localhost
      http:
        paths:
          - path: /cmon-ssh/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cmon-master
                port:
                  number: 9511
---
# Source: clustercontrol/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clustercontrol-websocket-cmon-ssh-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    
    nginx.ingress.kubernetes.io/rewrite-target: /cmon/ws/$1
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - localhost
      secretName: localhost
  rules:
    - host: localhost
      http:
        paths:
          - path: /cmon-ssh/cmon/ws/(.*)
            pathType: Prefix
            backend:
              service:
                name: cmon-master
                port:
                  number: 9511
---
# Source: clustercontrol/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "my-release-clustercontrol-test-connection"
  labels:
    helm.sh/chart: clustercontrol-2024.05.1
    app.kubernetes.io/name: clustercontrol
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2.0.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['my-release-clustercontrol:3000']
  restartPolicy: Never
